--- a/.github/workflows/data-collection.yml
+++ b/.github/workflows/data-collection.yml
@@ -1,44 +1,30 @@
-name: Collect Experiment Data
+name: Data Collection CI
 
 on:
-  repository_dispatch:
-    types: [experiment_data]
+  push:
+    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
-  collect-data:
+  build:
     runs-on: ubuntu-latest
+    
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-
-      - name: Process data
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_DATA_COLLECTION_TOKEN }}
-          DATA_FILE: 'data/results.json'
-        run: |
-          mkdir -p data
-          if [ ! -f "$DATA_FILE" ]; then
-            echo '[]' > "$DATA_FILE"
-          fi
-          
-          # Get the dispatched data
-          DATA='${{ toJSON(github.event.client_payload) }}'
-          
-          # Append new data
-          jq --argjson newData "$DATA" '. += [$newData]' "$DATA_FILE" > tmp.json && mv tmp.json "$DATA_FILE"
-          
-          # Commit and push changes
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git add "$DATA_FILE"
-          git commit -m "Add new experiment data"
-          git push
-
-      - name: Create data summary
-        run: |
-          echo "Data processed successfully"
+    - uses: actions/checkout@v2
+    
+    - name: Setup Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '16'
+        
+    - name: Build with token
+      run: |
+        echo "GH_DATA_COLLECTION_TOKEN=${{ secrets.GH_DATA_COLLECTION_TOKEN }}" > .env
+        npm install
+        npm run build
+        
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./build
